Fix horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
   font-family: 'Source Sans Pro', sans-serif;
+  overflow-x: hidden;
 }
 
 body {
